added mongo atlas

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
 MONGODB_URI_DEV=mongodb://localhost/v3
 
-MONGODB_URI=production
-MONGO_PORT=27017
-MONGO_DB=pro
+MONGODB_URL_CONNECT=<url_mongo_atlas>
 JWT_KEY=<your key>
