--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
